--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "laravel/installer",
+    "name": "mycroft84/installer",
     "description": "Laravel application installer.",
     "keywords": ["laravel"],
     "license": "MIT",
